added ability to assign multiple NPCs to one track

--- a/battlebeats/resource/localization/en/btblocalization.properties
+++ b/battlebeats/resource/localization/en/btblocalization.properties
@@ -3,9 +3,9 @@
 
 #also note that in some cases, mostly with buttons the text wont wrap or shrink if the string is longer than the available space
 
-#leave your nickname here if you want or leave it empty. this will show up in settings menu
+#leave your nickname here if you want or leave the /// if you dont. this will show up in the settings menu
 btb.translated.by.label=Translated by: 
-btb.translated.by=
+btb.translated.by=///
 
 #btb main
 btb.main.allexcluded=All tracks are excluded! Playing random one!
@@ -139,18 +139,22 @@ btb.ps.ts.rmb.offset_save=Save
 btb.ps.ts.rmb.offset_cancel=Cancel
 btb.ps.ts.rmb.offset_tip=Adds an offset to the track\nOn first play, it will start from this offset
 
-btb.ps.ts.rmb.assign_edit=Edit assigned NPC
+btb.ps.ts.rmb.assign_remove=Remove
+btb.ps.ts.rmb.assign_edited=Edited
+btb.ps.ts.rmb.assign_removed=Removed
+btb.ps.ts.rmb.assign_this_track=is already assigned to this track!
+
+btb.ps.ts.rmb.assign_edit=Edit
 btb.ps.ts.rmb.assign_current=Assigned NPC: 
-btb.ps.ts.rmb.assign_add=Assign NPC Class
+btb.ps.ts.rmb.assign_add=Assign new NPC Class
 btb.ps.ts.rmb.assign_title=Assign NPC to Track
 btb.ps.ts.rmb.assign_class=Class:
 btb.ps.ts.rmb.assign_enter_class=Enter NPC class (e.g npc_zombie)
 btb.ps.ts.rmb.assign_priority_highest=(Highest)
 btb.ps.ts.rmb.assign_priority_lowest=(Lowest)
 btb.ps.ts.rmb.assign_priority=Priority: 
-btb.ps.ts.rmb.assign_saveremove=Save/Remove
 btb.ps.ts.rmb.assign_save=Save
-btb.ps.ts.rmb.assign_removed_noti=Removed NPC class from track: 
+#btb.ps.ts.rmb.assign_removed_noti=Removed NPC class from track: 
 btb.ps.ts.rmb.assign_no_class=No NPC class entered
 btb.ps.ts.rmb.assign_already_assigned=is already assigned to track
 btb.ps.ts.rmb.assign_overwrite=Overwrite?
