--- a/battlebeats/resource/localization/pl/btblocalizationpl.properties
+++ b/battlebeats/resource/localization/pl/btblocalizationpl.properties
@@ -137,7 +137,12 @@ btb.ps.ts.rmb.offset_save=Zapisz
 btb.ps.ts.rmb.offset_cancel=Anuluj
 btb.ps.ts.rmb.offset_tip=Dodaje przesunięcie do utworu\nPrzy pierwszym odtworzeniu zacznie się od tego miejsca
 
-btb.ps.ts.rmb.assign_edit=Edytuj przypisanego NPC
+btb.ps.ts.rmb.assign_remove=Usuń
+btb.ps.ts.rmb.assign_edited=Edytowano
+btb.ps.ts.rmb.assign_removed=Usunięto
+btb.ps.ts.rmb.assign_this_track=jest już przypisany do tego utworu!
+
+btb.ps.ts.rmb.assign_edit=Edytuj
 btb.ps.ts.rmb.assign_current=Przypisany NPC: 
 btb.ps.ts.rmb.assign_add=Przypisz klasę NPC
 btb.ps.ts.rmb.assign_title=Assign NPC to Track
@@ -148,7 +153,7 @@ btb.ps.ts.rmb.assign_priority_lowest=(Najniższy)
 btb.ps.ts.rmb.assign_priority=Priorytet: 
 btb.ps.ts.rmb.assign_saveremove=Zapisz/Usuń
 btb.ps.ts.rmb.assign_save=Zapisz
-btb.ps.ts.rmb.assign_removed_noti=Usunięto klasę NPC z utworu: 
+#btb.ps.ts.rmb.assign_removed_noti=Usunięto klasę NPC z utworu: 
 btb.ps.ts.rmb.assign_no_class=Nie wprowadzono klasy NPC
 btb.ps.ts.rmb.assign_already_assigned=jest już przypisany do utworu
 btb.ps.ts.rmb.assign_overwrite=Nadpisać go?
