--- a/battlebeats/resource/localization/en/btblocalization.properties
+++ b/battlebeats/resource/localization/en/btblocalization.properties
@@ -110,6 +110,7 @@ btb.ps.sort.nothing_found=Nothing found!
 btb.ps.sort.favorite_only=Favorites only
 btb.ps.sort.include_only=Included only
 btb.ps.sort.exclude_only=Excluded only
+btb.ps.sort.random=Random
 btb.ps.search=Search track...
 
 btb.ps.ts.mp.no_track=No Track Selected
@@ -121,6 +122,7 @@ btb.ps.ts.mp.previous_track_tip=Previous Track
 btb.ps.ts.mp.next_track_tip=Next Track
 
 btb.ps.ts.icon_assigned=This track has an assigned NPC
+btb.ps.ts.icon_assigned_multiple=This track has multiple assigned NPCs
 btb.ps.ts.icon_offset=This track has an assigned offset
 btb.ps.ts.icon_subtitle=This track has subtitles
 btb.ps.ts.exclude_tip=Excluded tracks wont be selected by the music player
@@ -279,3 +281,4 @@ btb.options.misc.toggle_ui=Toggle UI from context menu
 btb.options.misc.toggle_ui_tip=The pack selector will remain open after closing the context menu instead of being minimized
 btb.options.misc.reload_packs=Reload Packs
 btb.options.misc.open_guide=Open Guide
+btb.options.misc.restore=Restore Defaults
