--- a/battlebeats/resource/localization/pl/btblocalizationpl.properties
+++ b/battlebeats/resource/localization/pl/btblocalizationpl.properties
@@ -108,6 +108,7 @@ btb.ps.sort.nothing_found=Nic nie znaleziono!
 btb.ps.sort.favorite_only=Tylko ulubione
 btb.ps.sort.include_only=Tylko dołączone
 btb.ps.sort.exclude_only=Tylko wykluczone
+btb.ps.sort.random=Losowo
 btb.ps.search=Szukaj utworu...
 
 btb.ps.ts.mp.no_track=Nie wybrano utworu
@@ -119,6 +120,7 @@ btb.ps.ts.mp.previous_track_tip=Poprzedni utwór
 btb.ps.ts.mp.next_track_tip=Następny utwór
 
 btb.ps.ts.icon_assigned=Ten utwór ma przypisanego NPC
+btb.ps.ts.icon_assigned_multiple=Ten utwór ma kilka przypisanych NPC
 btb.ps.ts.icon_offset=Ten utwór ma przypisane przesunięcie czasowe
 btb.ps.ts.icon_subtitle=Ten utwór ma napisy
 btb.ps.ts.exclude_tip=Wykluczone utwory nie będą wybierane przez odtwarzacz muzyki
@@ -278,3 +280,4 @@ btb.options.misc.toggle_ui=Przełącz interfejs z menu kontekstowego
 btb.options.misc.toggle_ui_tip=Selektor pakietów pozostanie otwarty po zamknięciu menu kontekstowego, zamiast być zminimalizowany
 btb.options.misc.reload_packs=Przeładuj paczki
 btb.options.misc.open_guide=Otwórz poradnik
+btb.options.misc.restore=Przywróć domyślnie
