new sorting + ui improvements

--- a/battlebeats/resource/localization/en/btblocalization.properties
+++ b/battlebeats/resource/localization/en/btblocalization.properties
@@ -83,6 +83,7 @@ btb.ps.info.ambient_button=Ambient Tracks
 btb.ps.info.ambient_button_tip=This pack doesnt have ambient tracks
 btb.ps.info.combat_button=Combat Tracks
 btb.ps.info.combat_button_tip=This pack doesnt have combat tracks
+btb.ps.info.all_button=ALL
 
 btb.ps.pack_enabled=Enabled
 btb.ps.pack_disabled=Disabled
@@ -111,6 +112,8 @@ btb.ps.sort.favorite_only=Favorites only
 btb.ps.sort.include_only=Included only
 btb.ps.sort.exclude_only=Excluded only
 btb.ps.sort.random=Random
+btb.ps.sort.offset_only=Only with offset
+btb.ps.sort.assigned_only=Only NPC assigned
 btb.ps.search=Search track...
 
 btb.ps.ts.mp.no_track=No Track Selected
@@ -172,8 +175,9 @@ btb.ps.ts.rmb.assign_noti_track=to track
 btb.ps.ts.rmb.show_lyrics=Show Lyrics
 btb.ps.ts.rmb.show_lyrics_title=Lyrics for: 
 
-btb.ps.pack_rmb.copy=Copy formatted steam description
+btb.ps.pack_rmb.copy=Copy formatted track list
 btb.ps.pack_rmb.copy_noti=Copied formatted description to clipboard!
+btb.ps.pack_rmb.open_workshop=Go to workshop page
 
 btb.ps.unknown_error=Unknown error
 
