--- a/battlebeats/resource/localization/pl/btblocalizationpl.properties
+++ b/battlebeats/resource/localization/pl/btblocalizationpl.properties
@@ -81,6 +81,7 @@ btb.ps.info.ambient_button=Utwory Ambientowe
 btb.ps.info.ambient_button_tip=Ta paczka nie zawiera utworów ambientowych
 btb.ps.info.combat_button=Utwory Bitewne
 btb.ps.info.combat_button_tip=Ta paczka nie zawiera utworów bitewnych
+btb.ps.info.all_button=WSZYSTKIE
 
 btb.ps.master_volume=GŁOŚNOŚĆ GŁÓWNA
 btb.ps.button.options=Ustawienia
@@ -109,6 +110,8 @@ btb.ps.sort.favorite_only=Tylko ulubione
 btb.ps.sort.include_only=Tylko dołączone
 btb.ps.sort.exclude_only=Tylko wykluczone
 btb.ps.sort.random=Losowo
+btb.ps.sort.offset_only=Tylko z przesunięciem czasowym
+btb.ps.sort.assigned_only=Tylko z przypisanym NPC
 btb.ps.search=Szukaj utworu...
 
 btb.ps.ts.mp.no_track=Nie wybrano utworu
@@ -171,8 +174,9 @@ btb.ps.ts.rmb.assign_noti_track=do utworu
 btb.ps.ts.rmb.show_lyrics=Pokaż tekst utworu
 btb.ps.ts.rmb.show_lyrics_title=Tekst utworu: 
 
-btb.ps.pack_rmb.copy=Skopiuj sformatowany opis Steam
+btb.ps.pack_rmb.copy=Skopiuj sformatowaną liste utworów
 btb.ps.pack_rmb.copy_noti=Skopiowano sformatowany opis do schowka!
+btb.ps.pack_rmb.open_workshop=Przejdź do strony warsztatu
 
 btb.ps.unknown_error=Nieznany błąd
 
@@ -267,7 +271,7 @@ btb.options.mplayer.combo_tip=Wznów od ostatniej pozycji: utwór będzie kontyn
 
 btb.options.misc.npc_los=Walka z NPC wymaga linii widzenia
 btb.options.misc.auto_popup=Automatyczny popup UI
-btb.options.misc.auto_popup_tip=Automatycznie otwiera selektor pakietów BattleBeats przy starcie, jeśli nie wybrano żadnych pakietów
+btb.options.misc.auto_popup_tip=Automatycznie otwiera selektor paczek BattleBeats przy starcie, jeśli nie wybrano żadnych paczek
 btb.options.misc.load_local=Wczytuj lokalne paczki
 btb.options.misc.load_local_tip=Pozwala wczytywać paczki muzyczne bezpośrednio z folderu addons/ bez konieczności przesyłania ich do warsztatu steam. Nie działa, jeśli włączony jest tryb debugowania\n(Nie przeznaczone do testowania paczek dźwiękowych - do tego użyj trybu debugowania)\n(Wymaga restartu lub ponownego wczytania paczek)
 btb.options.misc.debug_mode=Tryb debugowania
@@ -277,7 +281,7 @@ btb.options.misc.lower_vol_in_menu_tip=Obniża głośność w menu pauzy i w spa
 btb.options.misc.load_am_sus=Wczytaj utwory suspense z AM
 btb.options.misc.load_am_sus_tip=Pozwala wczytywać utwory suspense z paczek Action Music w kategorie ambient i bitewne\n(Wymaga restartu lub ponownego wczytania paczek)
 btb.options.misc.toggle_ui=Przełącz interfejs z menu kontekstowego
-btb.options.misc.toggle_ui_tip=Selektor pakietów pozostanie otwarty po zamknięciu menu kontekstowego, zamiast być zminimalizowany
+btb.options.misc.toggle_ui_tip=Selektor paczek pozostanie otwarty po zamknięciu menu kontekstowego, zamiast być zminimalizowany
 btb.options.misc.reload_packs=Przeładuj paczki
 btb.options.misc.open_guide=Otwórz poradnik
 btb.options.misc.restore=Przywróć domyślnie
