visual changes to the ui

--- a/battlebeats/resource/localization/en/btblocalization.properties
+++ b/battlebeats/resource/localization/en/btblocalization.properties
@@ -72,6 +72,11 @@ btb.spawnmenu.server.visibility_tip=Maximum distance between you and an enemy re
 btb.ps.title=BattleBeats Menu
 btb.ps.options.title=BattleBeats Settings
 
+btb.ps.error.conflict1=You have conflicting addons enabled/mounted
+btb.ps.error.conflict2=It is recommended to disable them to avoid issues
+btb.ps.error.debug1=Debug Mode is enabled
+btb.ps.error.debug2=Some functions may be disabled or work differently
+
 btb.ps.verification.pass=Pack verification PASSED!
 btb.ps.verification.failed_1=Pack verification FAILED! Found
 btb.ps.verification.failed_2=error(s)
@@ -115,6 +120,7 @@ btb.ps.sort.random=Random
 btb.ps.sort.offset_only=Only with offset
 btb.ps.sort.assigned_only=Only NPC assigned
 btb.ps.search=Search track...
+btb.ps.sort.tooltip=Select sorting
 
 btb.ps.ts.mp.no_track=No Track Selected
 btb.ps.ts.mp.loop_enabled=Loop Enabled
@@ -167,6 +173,7 @@ btb.ps.ts.rmb.assign_conf_overwrite=Confirm Overwrite
 btb.ps.ts.rmb.assign_yes=Yes
 btb.ps.ts.rmb.assign_no=No
 btb.ps.ts.rmb.assign_tip=Assign an NPC class to this combat track with a priority (1-5)\nThe track with the highest priority will play when fighting multiple NPCs
+btb.ps.ts.rmb.assign_img_tip=You can right click on an NPC inside the spawnmenu and select 'Copy to clipboard' to copy its NPC class
 
 btb.ps.ts.rmb.assign_noti_class=Assigned NPC class
 btb.ps.ts.rmb.assign_noti_priority=with priority
@@ -253,6 +260,8 @@ btb.options.noti.y_pos=Notification Y position
 btb.options.noti.default_pos=Default: 
 
 btb.options.sub.enable_sub=Enable Subtitles
+btb.options.sub.sub_height=Subtitles height
+btb.options.sub.sub_height_noti_text=Subtitles Position
 
 btb.options.mplayer.curr_pack_only=Switch to current pack only
 btb.options.mplayer.curr_pack_only_tip=When switching between ambient and combat, only tracks from the same pack will be used. When a track ends naturally, the next one will still be chosen randomly from all enabled packs
@@ -269,6 +278,8 @@ btb.options.mplayer.combo=Continue Mode
 btb.options.mplayer.combo_1=Resume from last position
 btb.options.mplayer.combo_2=Play simultaneously
 btb.options.mplayer.combo_tip=Resume from last position: the track will continue from where it left off before switching.\nPlay simultaneously: tracks continue playing in the background during switches (not actually audible)
+btb.options.mplayer.disable_fade=Disable Fade transitions
+btb.options.mplayer.disable_fade_tip=Completely disables the fade effect when switching between tracks, so they start and stop instantly
 
 btb.options.misc.npc_los=NPC Combat requires LoS
 btb.options.misc.auto_popup=Auto Popup
