--- a/battlebeats/resource/localization/pl/btblocalizationpl.properties
+++ b/battlebeats/resource/localization/pl/btblocalizationpl.properties
@@ -70,6 +70,11 @@ btb.spawnmenu.server.visibility_tip=Maksymalna odległość między tobą a wrog
 btb.ps.title=Menu BattleBeats
 btb.ps.options.title=Ustawienia BattleBeats
 
+btb.ps.error.conflict1=Masz włączone lub zamontowane dodatki mogące powodować konflikty
+btb.ps.error.conflict2=Zalecane jest wyłączenie ich, aby uniknąć problemów
+btb.ps.error.debug1=Tryb debugowania jest włączony
+btb.ps.error.debug2=Niektóre funkcje mogą być wyłączone lub działać inaczej
+
 btb.ps.verification.pass=Weryfikacja paczki zakończona pomyślnie!
 btb.ps.verification.failed_1=Weryfikacja paczki NIE powiodła się! Znaleziono
 btb.ps.verification.failed_2=błąd(y)
@@ -113,6 +118,7 @@ btb.ps.sort.random=Losowo
 btb.ps.sort.offset_only=Tylko z przesunięciem czasowym
 btb.ps.sort.assigned_only=Tylko z przypisanym NPC
 btb.ps.search=Szukaj utworu...
+btb.ps.sort.tooltip=Wybierz sortowanie
 
 btb.ps.ts.mp.no_track=Nie wybrano utworu
 btb.ps.ts.mp.loop_enabled=Zapętlenie włączone
@@ -150,7 +156,7 @@ btb.ps.ts.rmb.assign_this_track=jest już przypisany do tego utworu!
 btb.ps.ts.rmb.assign_edit=Edytuj
 btb.ps.ts.rmb.assign_current=Przypisany NPC: 
 btb.ps.ts.rmb.assign_add=Przypisz klasę NPC
-btb.ps.ts.rmb.assign_title=Assign NPC to Track
+btb.ps.ts.rmb.assign_title=Przypisz NPC to utworu
 btb.ps.ts.rmb.assign_class=Klasa:
 btb.ps.ts.rmb.assign_enter_class=Wpisz klasę NPC (np. npc_zombie)
 btb.ps.ts.rmb.assign_priority_highest=(Najwyższy)
@@ -166,6 +172,7 @@ btb.ps.ts.rmb.assign_conf_overwrite=Potwierdź nadpisanie
 btb.ps.ts.rmb.assign_yes=Tak
 btb.ps.ts.rmb.assign_no=Nie
 btb.ps.ts.rmb.assign_tip=Przypisz klasę NPC do tego utworu bitewnego z priorytetem (1-5)\nUtwór z najwyższym priorytetem będzie odtwarzany podczas walki z wieloma NPC
+btb.ps.ts.rmb.assign_img_tip=Możesz kliknąć prawym przyciskiem myszy na NPC w spawnmenu i wybrać 'Kopiuj' aby skopiować jego klasę NPC
 
 btb.ps.ts.rmb.assign_noti_class=Przypisano klasę NPC
 btb.ps.ts.rmb.assign_noti_priority=z priorytetem
@@ -238,7 +245,7 @@ btb.options.noti.replay_tip=Wyświetla powiadomienie nawet wtedy, gdy ten sam ut
 btb.options.noti.show_nombat=Pomijaj nazwy utworów Nombat
 btb.options.noti.show_nombat_tip=Ukrywa nazwy utworów takie jak C7 czy A2 podczas odtwarzania z paczek Nombat
 btb.options.noti.pack_name=Pokaż nazwę paczki w powiadomieniu
-btb.options.noti.pack_name_tip=Pokazuje nazwę paczki, z którego aktualnie odtwarzany jest utwór
+btb.options.noti.pack_name_tip=Pokazuje nazwę paczki, z której aktualnie odtwarzany jest utwór
 btb.options.noti.preview=Włącz powiadomienie podglądu
 btb.options.noti.preview_tip=Wyświetla powiadomienie, gdy odsłuchujesz utwory w odtwarzaczu w UI
 btb.options.noti.visualizer=Pokaż wizualizator w powiadomieniu
@@ -263,11 +270,13 @@ btb.options.mplayer.always_continue_tip=Pomija czas oczekiwania i zawsze wznawia
 btb.options.mplayer.exclude_assigned=Wyklucz przypisane utwory
 btb.options.mplayer.exclude_assigned_tip=Utwory przypisane do NPC nie będą odtwarzane przy losowym wyborze utworów bitewnych
 btb.options.mplayer.switch_to_lower=Przełącz na niższy priorytet
-btb.options.mplayer.switch_to_lower_tip=Utwór o wyższym priorytecie przełączy się na niższy priorytet (jeśli dostępny), gdy NPC z tym priorytetem zginie
+btb.options.mplayer.switch_to_lower_tip=Utwór o wyższym priorytecie przełączy się na niższy priorytet (jeśli dostępny), gdy NPC z wyższym priorytetem zginie
 btb.options.mplayer.combo=Tryb kontynuacji
 btb.options.mplayer.combo_1=Wznów od ostatniej pozycji
 btb.options.mplayer.combo_2=Odtwarzaj równocześnie
 btb.options.mplayer.combo_tip=Wznów od ostatniej pozycji: utwór będzie kontynuowany od miejsca, w którym został przerwany przed przełączeniem.\nOdtwarzaj równocześnie: utwory będą kontynuować odtwarzanie w tle podczas przełączeń (nie będą faktycznie słyszalne)
+btb.options.mplayer.disable_fade=Wyłącz płynne przejścia
+btb.options.mplayer.disable_fade_tip=Całkowicie wyłącza efekt zanikania przy zmianie utworów, dzięki czemu zaczynają i kończą się natychmiast
 
 btb.options.misc.npc_los=Walka z NPC wymaga linii widzenia
 btb.options.misc.auto_popup=Automatyczny popup UI
