new api + 3d subtitles

--- a/battlebeats/resource/localization/en/btblocalization.properties
+++ b/battlebeats/resource/localization/en/btblocalization.properties
@@ -20,7 +20,7 @@ btb.main.volume_cancel=Cancel
 #btb notification
 btb.notification.unknown_pack=Unknown Pack
 btb.notification.now_playing=NOW PLAYING
-btb.notification.from=From: 
+#btb.notification.from=From: 
 btb.notification.position=Notification Position
 
 #btb spawnmenu
@@ -194,6 +194,7 @@ btb.ps.noti.cant_edit_error=This pack has an error and cannot be edited!
 btb.ps.noti.cant_edit_debug=Cannot edit workshop packs while debug mode is active!
 
 #btb guide
+btb.guide.title=BattleBeats Guide
 btb.guide.close=Close
 btb.guide.next=Next ▶
 btb.guide.prev=◀ Prev
@@ -203,7 +204,7 @@ btb.guide.g2=Alternatively, you can open it through Spawnmenu -> Utilities -> Ba
 btb.guide.g3=Alright, here is the UI (that you are already probably seeing). This is the main panel
 btb.guide.g4=You can enable each pack by pressing these buttons here
 btb.guide.g5=You can also click the entire panel to open a dropdown menu
-btb.guide.g6=By pressing either of these two buttons, you can access a list of ambient or combat tracks from the selected pack
+btb.guide.g6=By pressing the button on the left, you will access a list of ambient tracks. The same goes for the right button, which gives you access to combat tracks. Or you can click the middle button to see a list of both
 btb.guide.g7=This is the main track panel
 btb.guide.g8=You can search for any track name using the search bar at the top
 btb.guide.g9=Next to it, you can select the sorting mode for the tracks: for example, from A-Z or Z-A
@@ -242,7 +243,7 @@ btb.options.noti.noti_always_vis_tip=The notification will remain visible for th
 btb.options.noti.progress_bar=Show progress bar
 btb.options.noti.progress_bar_tip=Displays a progress bar for the current track (showing total time and current time) at the bottom of the notification
 btb.options.noti.replay=Show replay notification
-btb.options.noti.replay_tip=Displays a notification even if the same track is replayed (e.g. after leaving combat before the wait time ends). \n(This is enabled by default if 'Notification always visible' is active)
+btb.options.noti.replay_tip=Displays a notification even if the same track is replayed (e.g. after leaving combat before the wait time ends)\n(This is enabled by default if 'Notification always visible' is active)
 btb.options.noti.show_nombat=Skip Nombat track names
 btb.options.noti.show_nombat_tip=Hides track names like C7 or A2 when playing tracks from Nombat packs
 btb.options.noti.pack_name=Show pack name in notification
@@ -261,7 +262,13 @@ btb.options.noti.default_pos=Default:
 
 btb.options.sub.enable_sub=Enable Subtitles
 btb.options.sub.sub_height=Subtitles height
-btb.options.sub.sub_height_noti_text=Subtitles Position
+btb.options.sub.sub_height_noti_text=2D Subtitles Position
+btb.options.sub.static=Static 3D subtitles
+btb.options.sub.static_tip=If enabled subtitles will remain in the same position, otherwise they will follow the player
+btb.options.sub.combo=Subtitles Type
+btb.options.sub.combo1=2D on HUD
+btb.options.sub.combo2=3D in world
+btb.options.sub.combo_tip=2D on HUD: Subtitles will appear on the screen, similar to how they are shown in cinemas\n3D in world: Subtitles will appear in front of you in 3D space at random positions
 
 btb.options.mplayer.curr_pack_only=Switch to current pack only
 btb.options.mplayer.curr_pack_only_tip=When switching between ambient and combat, only tracks from the same pack will be used. When a track ends naturally, the next one will still be chosen randomly from all enabled packs
@@ -277,7 +284,7 @@ btb.options.mplayer.switch_to_lower_tip=A track with higher priority will switch
 btb.options.mplayer.combo=Continue Mode
 btb.options.mplayer.combo_1=Resume from last position
 btb.options.mplayer.combo_2=Play simultaneously
-btb.options.mplayer.combo_tip=Resume from last position: the track will continue from where it left off before switching.\nPlay simultaneously: tracks continue playing in the background during switches (not actually audible)
+btb.options.mplayer.combo_tip=Resume from last position: the track will continue from where it left off before switching\nPlay simultaneously: tracks continue playing in the background during switches (not actually audible)
 btb.options.mplayer.disable_fade=Disable Fade transitions
 btb.options.mplayer.disable_fade_tip=Completely disables the fade effect when switching between tracks, so they start and stop instantly
 
@@ -297,3 +304,4 @@ btb.options.misc.toggle_ui_tip=The pack selector will remain open after closing 
 btb.options.misc.reload_packs=Reload Packs
 btb.options.misc.open_guide=Open Guide
 btb.options.misc.restore=Restore Defaults
+btb.options.misc.restore_tip=Restores settings to default BattleBeats settings
