--- a/battlebeats/resource/localization/pl/btblocalizationpl.properties
+++ b/battlebeats/resource/localization/pl/btblocalizationpl.properties
@@ -18,7 +18,7 @@ btb.main.volume_cancel=Anuluj
 #btb notification
 btb.notification.unknown_pack=Nieznana Paczka
 btb.notification.now_playing=TERAZ GRANE
-btb.notification.from=Z PACZKI: 
+#btb.notification.from=Z PACZKI: 
 btb.notification.position=Pozycja Powiadomienia
 
 #btb spawnmenu
@@ -193,6 +193,7 @@ btb.ps.noti.cant_edit_error=Ta paczka zawiera błąd i nie może być edytowany!
 btb.ps.noti.cant_edit_debug=Nie można edytować paczek z warsztatu, gdy tryb debugowania jest aktywny!
 
 #btb guide
+btb.guide.title=Przewodnik BattleBeats
 btb.guide.close=Zamknij
 btb.guide.next=Dalej ▶
 btb.guide.prev=◀ Wstecz
@@ -202,7 +203,7 @@ btb.guide.g2=Alternatywnie, możesz je otworzyć przez spawnmenu -> Narzędzia -
 btb.guide.g3=Oto interfejs (który pewnie już widzisz). To jest główny panel
 btb.guide.g4=Możesz włączyć każdą paczke, naciskając te przyciski tutaj
 btb.guide.g5=Możesz też kliknąć cały panel, aby otworzyć menu rozwijane
-btb.guide.g6=Klikając którykolwiek z tych dwóch przycisków, uzyskasz dostęp do listy utworów ambientowych lub bitewnych z wybranej paczki
+btb.guide.g6=Naciśnięcie lewego przycisku wyświetli listę utworów ambientowych. To samo dotyczy prawego przycisku, który pokaże utwory bojowe. Możesz też kliknąć środkowy przycisk, aby zobaczyć listę obu rodzajów utworów
 btb.guide.g7=To jest główny panel utworów
 btb.guide.g8=Możesz wyszukiwać utwory po nazwie, korzystając z paska wyszukiwania na górze
 btb.guide.g9=Obok możesz wybrać tryb sortowania utworów, na przykład od A do Z lub od Z do A
@@ -259,6 +260,14 @@ btb.options.noti.y_pos=Pozycja Y powiadomienia
 btb.options.noti.default_pos=Domyślna: 
 
 btb.options.sub.enable_sub=Włącz Napisy
+btb.options.sub.sub_height=Wysokość napisów 2D
+btb.options.sub.sub_height_noti_text=Pozycja napisów 2D
+btb.options.sub.static=Statyczne napisy 3D
+btb.options.sub.static_tip=Jeśli włączone napisy po utworzeniu pozostaną w tej samej pozycji, w przeciwnym razie będą podążać za graczem
+btb.options.sub.combo=Typ napisów
+btb.options.sub.combo1=2D na HUDzie
+btb.options.sub.combo2=3D w świecie
+btb.options.sub.combo_tip=2D na HUDzie: Napisy będą wyświetlane na ekranie, podobnie jak w kinach\n3D w świecie: Napisy będą pojawiać się przed tobą w losowych miejscach w przestrzeni 3D
 
 btb.options.mplayer.curr_pack_only=Przełączaj tylko na bieżącą paczke
 btb.options.mplayer.curr_pack_only_tip=Podczas przełączania między muzyką ambientową a bitewną będą używane tylko utwory z tej samej paczki. Po naturalnym zakończeniu utworu następny będzie wybrany losowo spośród wszystkich włączonych paczek
@@ -292,5 +301,6 @@ btb.options.misc.load_am_sus_tip=Pozwala wczytywać utwory suspense z paczek Act
 btb.options.misc.toggle_ui=Przełącz interfejs z menu kontekstowego
 btb.options.misc.toggle_ui_tip=Selektor paczek pozostanie otwarty po zamknięciu menu kontekstowego, zamiast być zminimalizowany
 btb.options.misc.reload_packs=Przeładuj paczki
-btb.options.misc.open_guide=Otwórz poradnik
+btb.options.misc.open_guide=Otwórz przewodnik
 btb.options.misc.restore=Przywróć domyślnie
+btb.options.misc.restore_tip=Przywraca ustawienia do domyślnych ustawień BattleBeats
