minor optimizations/additions to some functions

--- a/battlebeats/resource/localization/en/btblocalization.properties
+++ b/battlebeats/resource/localization/en/btblocalization.properties
@@ -229,7 +229,7 @@ btb.options.cat.sound=Sound
 btb.options.cat.notification=Notifications
 btb.options.cat.subtitles=Subtitles
 btb.options.cat.music_player=Music Player
-btb.options.cat.misc=Misc
+btb.options.cat.misc=Other
 
 btb.options.snd.master_volume=Master Volume
 btb.options.snd.ambient_volume=Ambient Volume
