changes in packs loading

--- a/battlebeats/resource/localization/en/btblocalization.properties
+++ b/battlebeats/resource/localization/en/btblocalization.properties
@@ -17,6 +17,8 @@ btb.main.volume_warning_4=Proceed only if you understand the risk
 btb.main.volume_confirm=I understand the risk
 btb.main.volume_cancel=Cancel
 
+btb.loading.local_pack=Local Music
+
 #btb notification
 btb.notification.unknown_pack=Unknown Pack
 btb.notification.now_playing=NOW PLAYING
@@ -77,6 +79,15 @@ btb.ps.error.conflict2=It is recommended to disable them to avoid issues
 btb.ps.error.debug1=Debug Mode is enabled
 btb.ps.error.debug2=Some functions may be disabled or work differently
 
+btb.ps.warn.volume_1=BattleBeats has been operating at elevated volume levels
+btb.ps.warn.volume_11=Prolonged exposure may affect hearing comfort
+btb.ps.warn.volume_2=BattleBeats has been operating at elevated volume levels for 4 hours
+btb.ps.warn.volume_22=Extended exposure increases risk of auditory fatigue
+btb.ps.warn.volume_3=BattleBeats has been operating at high volume levels for over 8 hours
+btb.ps.warn.volume_33=Volume reduction is recommended
+btb.ps.warn.volume_4=BattleBeats has been operating at excessive volume levels for over 24 hours
+btb.ps.warn.volume_44=Continued exposure may result in hearing damage
+
 btb.ps.verification.pass=Pack verification PASSED!
 btb.ps.verification.failed_1=Pack verification FAILED! Found
 btb.ps.verification.failed_2=error(s)
@@ -134,6 +145,7 @@ btb.ps.ts.icon_assigned=This track has an assigned NPC
 btb.ps.ts.icon_assigned_multiple=This track has multiple assigned NPCs
 btb.ps.ts.icon_offset=This track has an assigned offset
 btb.ps.ts.icon_subtitle=This track has subtitles
+btb.ps.ts.icon_start=This track is set as a starting track
 btb.ps.ts.exclude_tip=Excluded tracks wont be selected by the music player
 btb.ps.ts.include_tip=Included tracks play normally
 btb.ps.ts.format=Track names may appear unusual or poorly formatted because they were not originally designed for display
@@ -141,6 +153,10 @@ btb.ps.ts.format=Track names may appear unusual or poorly formatted because they
 btb.ps.ts.rmb.copy=Copy Track Path
 btb.ps.ts.rmb.add_fav=Add to Favorites
 btb.ps.ts.rmb.remove_fav=Remove from Favorites
+
+btb.ps.ts.rmb.set_start_track=Set as a start track
+btb.ps.ts.rmb.remove_start_track=Remove start track
+btb.ps.ts.rmb.set_start_track_tip=This track will play first when you enter the game\nYou can learn more about this option in the settings
 
 btb.ps.ts.rmb.offset_set=Set Offset
 btb.ps.ts.rmb.offset_edit=Edit Offset
@@ -232,10 +248,16 @@ btb.options.cat.music_player=Music Player
 btb.options.cat.misc=Other
 
 btb.options.snd.master_volume=Master Volume
+btb.options.snd.master_volume_tip=You can go over 200% up to 1000% using console command 'battlebeats_volume' 
 btb.options.snd.ambient_volume=Ambient Volume
 btb.options.snd.combat_volume=Combat Volume
 btb.options.snd.enable_ambient=Enable Ambient
 btb.options.snd.enable_combat=Enable Combat
+btb.options.snd.start_mode=BattleBeats Startup Track
+btb.options.snd.start_mode_tip=Choose how the first track should be selected when BattleBeats loads\nRandom - A random track from available packs is selected\nRandom Favorite - A random track from your favorites is selected\nUser Selected - The track you have chosen (select it in the track selector).\nNOTE: If you have no favorites or havent selected a track, a random one will play instead
+btb.options.snd.start_mode_1=Random
+btb.options.snd.start_mode_2=Random Favorite
+btb.options.snd.start_mode_3=User Selected
 
 btb.options.noti.enable_noti=Enable notification
 btb.options.noti.noti_always_vis=Notification always visible
@@ -288,6 +310,7 @@ btb.options.mplayer.combo_tip=Resume from last position: the track will continue
 btb.options.mplayer.disable_fade=Disable Fade transitions
 btb.options.mplayer.disable_fade_tip=Completely disables the fade effect when switching between tracks, so they start and stop instantly
 
+btb.options.misc.button_conf=Press again to confirm
 btb.options.misc.npc_los=NPC Combat requires LoS
 btb.options.misc.auto_popup=Auto Popup
 btb.options.misc.auto_popup_tip=Automatically open the BattleBeats pack selector on startup if no packs are selected
@@ -303,5 +326,16 @@ btb.options.misc.toggle_ui=Toggle UI from context menu
 btb.options.misc.toggle_ui_tip=The pack selector will remain open after closing the context menu instead of being minimized
 btb.options.misc.reload_packs=Reload Packs
 btb.options.misc.open_guide=Open Guide
+
 btb.options.misc.restore=Restore Defaults
-btb.options.misc.restore_tip=Restores settings to default BattleBeats settings
+btb.options.misc.restore_tip=Restores all settings to the default BattleBeats configuration
+btb.options.misc.restore_tip_conf=Settings successfully restored to defaults
+btb.options.misc.delete_data=Delete Data
+btb.options.misc.delete_data_tip=Deletes all saved user data from disk, eg. excluded tracks, favorited tracks, NPC assignments and track offsets
+btb.options.misc.delete_data_tip_conf=User data successfully deleted
+btb.options.misc.clean_cache=Clean Cache
+btb.options.misc.clean_cache_tip=Deletes less important cached values such as the selected start track and other minor data used internally\nGenerally safe to use
+btb.options.misc.clean_cache_tip_conf=Cache successfully cleaned
+btb.options.misc.clean_unused_tracks=Clean Unused Tracks
+btb.options.misc.clean_unused_tracks_tip=Removes non-existent track paths from user data. This will remove all related entries (excluded tracks, NPC assignments, etc.) if the track belongs to a pack that is either uninstalled or not mounted
+btb.options.misc.clean_unused_tracks_tip_conf=Unused tracks successfully cleaned
